@@ -1,0 +1,32 @@
+CensusPurgeFlags.PURGE_NONE -> False
+0x00 -> False
+CensusPurgeFlags.PURGE_NON_MINIMAL -> True
+0x01 -> True
+AngleAlgFlags.AS_ALG_DEFAULT -> False
+0x0000 -> False
+AngleAlgFlags.AS_ALG_TREE -> True
+0x0010 -> True
+HyperListFlags.HS_LIST_DEFAULT -> False
+0x0000 -> False
+HyperListFlags.HS_VERTEX -> True
+0x0004 -> True
+HyperAlgFlags.HS_ALG_DEFAULT -> False
+0x0000 -> False
+HyperAlgFlags.HS_VERTEX_DD -> True
+0x0020 -> True
+NormalListFlags.NS_LIST_DEFAULT -> False
+0x0000 -> False
+NormalListFlags.NS_FUNDAMENTAL -> True
+0x0008 -> True
+NormalAlgFlags.NS_ALG_DEFAULT -> False
+0x0000 -> False
+NormalAlgFlags.NS_VERTEX_TREE -> True
+0x0010 -> True
+SurfaceExportFields.surfaceExportNone -> False
+0x0000 -> False
+SurfaceExportFields.surfaceExportName -> True
+0x0001 -> True
+NormalCoords.NS_STANDARD -> True
+NormalCoords.NS_QUAD -> True
+Type.UNKNOWN_TYPE -> True
+Type.PARACHUTE -> True
