@@ -1,0 +1,73 @@
+# Regina - A Normal Surface Theory Calculator
+# Python Test Suite Component
+#
+# Copyright (c) 2023, Ben Burton
+# For further details contact Ben Burton (bab@debian.org).
+#
+# Tests flags and flag sets.
+#
+# This file is a single component of Regina's python test suite.  To run
+# the python test suite, move to the main python directory in the source
+# tree and run "make check".
+#
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License as
+# published by the Free Software Foundation; either version 2 of the
+# License, or (at your option) any later version.
+#
+# As an exception, when this program is distributed through (i) the
+# App Store by Apple Inc.; (ii) the Mac App Store by Apple Inc.; or
+# (iii) Google Play by Google Inc., then that store may impose any
+# digital rights management, device limits and/or redistribution
+# restrictions that are required by its terms of service.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# General Public License for more details.
+#
+# You should have received a copy of the GNU General Public
+# License along with this program; if not, write to the Free
+# Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston,
+# MA 02110-1301, USA.
+
+def evalObj(x):
+	if x:
+		print(x, '-> True')
+	else:
+		print(x, '-> False')
+	
+def evalFlag(x):
+	# Evaluate as a raw enum value:
+	evalObj(x)
+	
+	# Evaluate as a rich flags object:
+	evalObj(x | x)
+
+evalFlag(regina.PURGE_NONE)
+evalFlag(regina.PURGE_NON_MINIMAL)
+
+evalFlag(regina.AS_ALG_DEFAULT)
+evalFlag(regina.AS_ALG_TREE)
+
+evalFlag(regina.HS_LIST_DEFAULT)
+evalFlag(regina.HS_VERTEX)
+
+evalFlag(regina.HS_ALG_DEFAULT)
+evalFlag(regina.HS_VERTEX_DD)
+
+evalFlag(regina.NS_LIST_DEFAULT)
+evalFlag(regina.NS_FUNDAMENTAL)
+
+evalFlag(regina.NS_ALG_DEFAULT)
+evalFlag(regina.NS_VERTEX_TREE)
+
+evalFlag(regina.surfaceExportNone)
+evalFlag(regina.surfaceExportName)
+
+# Some enum types that are NOT intended to be used as flags:
+
+evalObj(regina.NS_STANDARD)            # value is zero
+evalObj(regina.NS_QUAD)                # value is non-zero
+evalObj(regina.Triangle3.UNKNOWN_TYPE) # value is zero
+evalObj(regina.Triangle3.PARACHUTE)    # value is non-zero
